<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" android:gravity="center">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:gravity="center">
        <TextView
            android:text="@string/Titulo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:gravity="center">
            <Button
                android:text="@string/boton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/CaF" android:layout_weight="1"/>
            <Button
                android:text="@string/boton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/FaC" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:gravity="center">
            <Button
                android:text="@string/boton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/CaK" android:layout_weight="1"/>
            <Button
                android:text="@string/boton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/KaC" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>